--- a/Tinklapis/www.maistoukisjums.lt/sites/587371c38b0ad73f9f92ff50/theme/stylesheets/application8a6e.css
+++ b/Tinklapis/www.maistoukisjums.lt/sites/587371c38b0ad73f9f92ff50/theme/stylesheets/application8a6e.css
@@ -46,8 +46,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block; }
 
 body {
-  background-image: url(../images/backgroundd.jpg?870d65099de8fb771e4d028511229cc0);
-  background-position: top center;
+  background-image: url(../images/backgroundas.jpg?870d65099de8fb771e4d028511229cc0);
+  background-position: right top;
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #FFFFFF;
