--- a/Tinklapis/www.maistoukisjums.lt/sites/587371c38b0ad73f9f92ff50/theme/stylesheets/application8a6e.css
+++ b/Tinklapis/www.maistoukisjums.lt/sites/587371c38b0ad73f9f92ff50/theme/stylesheets/application8a6e.css
@@ -184,7 +184,7 @@ body {
 
 #page_content_background {
   width: 904px;
-  background-image: url(../images/page_contents_bgd8fb.png?8046fa4c309da9477241e3d1aa59d981);
+  background-image: url(../images/fonas.png?8046fa4c309da9477241e3d1aa59d981);
   background-repeat: repeat;
   padding: 15px 15px 20px 15px;
   min-height: 420px;
@@ -428,7 +428,7 @@ div.fb-comments {
   color: #FFFFFF;
   font-size: 15px;
   background-color: transparent;
-  background-image: url(../images/page_contents_bgd8fb.png?8046fa4c309da9477241e3d1aa59d981);
+  background-image: url(../images/fonas.png?8046fa4c309da9477241e3d1aa59d981);
   background-repeat: repeat;
   border: 1px solid #323232; }
 
